Added debug lib integration

--- a/src/global/g-debug/g-debug.styl
+++ b/src/global/g-debug/g-debug.styl
@@ -6,6 +6,10 @@
  * https://github.com/V4Fire/Client/blob/master/LICENSE
  */
 
-package('i-static-page')
-	.extends('i-page')
-	.dependencies('g-def', 'g-debug');
+.jasmine_html-reporter
+	position fixed
+	top 0
+	display none
+
+.jasmine-failure-list
+	display block
