Added demo styles

--- a/src/form/b-button/b-button_theme_demo.styl
+++ b/src/form/b-button/b-button_theme_demo.styl
@@ -6,14 +6,6 @@
  * https://github.com/V4Fire/Client/blob/master/LICENSE
  */
 
-module.exports = [
-	{
-		attrs: {
-			':theme': "'demo'"
-		},
-
-		content: {
-			default: 'Hello world'
-		}
-	}
-];
+b-button_theme_demo extends b-button
+	/theme
+		background #CCC
