--- a/src/base/b-virtual-scroll/b-virtual-scroll_theme_demo.styl
+++ b/src/base/b-virtual-scroll/b-virtual-scroll_theme_demo.styl
@@ -8,6 +8,23 @@
 
 b-virtual-scroll_theme_demo extends b-virtual-scroll
 	/theme &__option-el
+		position relative
+
+		display flex
+		justify-content center
+		align-items center
+
 		size 200px
 		margin 20px
+		
 		background-color red
+
+		&:after
+			content attr(data-index)
+			font-size 20px
+			color #FFF
+
+	/theme &__skeleton
+		size 200px
+		margin 20px
+		background-color gray
