Added documentation for gIcon

--- a/src/global/g-icon/g-icon.styl
+++ b/src/global/g-icon/g-icon.styl
@@ -6,7 +6,9 @@
  * https://github.com/V4Fire/Client/blob/master/LICENSE
  */
 
-@import "global/g-icon/g-icon.interface.styl"
+$p = {
 
-.g-icon
-	extends($gIcon)
+}
+
+g-icon
+	fill currentColor
