--- a/src/global/g-def/consts.styl
+++ b/src/global/g-def/consts.styl
@@ -6,8 +6,9 @@
  * https://github.com/V4Fire/Client/blob/master/LICENSE
  */
 
-@import "global/g-def/funcs.styl"
+/**
+ * This file is deprecated
+ * @deprecated
+ */
 
-EASING_DURATION = 0.22s
-BASE_FONT_PATTERN = '"Open Sans%t", Arial, sans-serif'
-BASE_FONT = execFontPattern()
+@import "global/g-def/const.styl"
