:wrench: Fixed invalid imports

--- a/src/global/g-def/funcs.styl
+++ b/src/global/g-def/funcs.styl
@@ -16,8 +16,7 @@
 
 @import "~@pzlr/stylus-inheritance/runtime.styl"
 
-@import "global/g-def/helpers.styl"
-@import "global/g-def/mixins.styl"
-@import "global/g-def/font.styl"
-@import "global/g-def/img.styl"
-@import "global/g-def/ds.styl"
+@import "global/g-def/funcs/img.styl"
+@import "global/g-def/funcs/font.styl"
+@import "global/g-def/funcs/mixins.styl"
+@import "global/g-def/funcs/ds.styl"
