--- a/src/global/g-def/funcs/ds.styl
+++ b/src/global/g-def/funcs/ds.styl
@@ -6,8 +6,6 @@
  * https://github.com/V4Fire/Client/blob/master/LICENSE
  */
 
-@import "global/g-def/funcs/helpers"
-
 /**
  * Returns a color from the global kits or from Design System
  *
@@ -66,3 +64,28 @@ r($name, $pos = null)
 
 		else
 			border-radius $val
+
+/**
+ * Generates necessary rules for the specified component options and factory.
+ * The function is used to integrate a Design System.
+ *
+ * @param $p
+ * @param $fn
+ */
+generateRules($p, $fn)
+	if !$p.skipDsInheritance
+		//#if runtime has ds-vars
+		$fn($p.__vars__)
+		//#endif
+
+		//#unless runtime has ds-vars
+		$fn($p)
+		//#endunless
+
+		//#if runtime has ds-diff
+		&_diff_true
+			$fn($p.__diffVars__)
+
+		&_diff_false
+			$fn($p.__vars__)
+		//#endif
