--- a/src/base/b-list/b-list.styl
+++ b/src/base/b-list/b-list.styl
@@ -33,6 +33,9 @@ b-list extends i-data
 	&__link:active
 		{$p.onActive}
 
+	&__link_active_true
+		color red
+
 	&__el
 	&__link_progress_true &__link-progress
 		display block
