other ds options themify

--- a/src/form/b-input/b-input-ds.styl
+++ b/src/form/b-input/b-input-ds.styl
@@ -34,7 +34,7 @@ b-input
 				$textStyle = getField($mod, textStyle)
 
 				if $textStyle
-					for $key, $val in getDSOptions(path(text $textStyle style))
+					for $key, $val in getDSOptions(text, path($textStyle style))
 						$mod[$key] = $val
 
 				if $mod
