--- a/src/global/g-def/funcs/ds.styl
+++ b/src/global/g-def/funcs/ds.styl
@@ -75,11 +75,13 @@ r($name, $pos = null)
  * @param $fn
  */
 generateRules($p, $fn)
+	//#if runtime has ds-diff
 	if !$p.skipDsInheritance
-		//#if runtime has ds-diff
 		&_diff_true
 			$fn($p.__diffVars__)
 
 		&_diff_false
 			$fn($p.__vars__)
-		//#endif
+
+	return
+	//#endif
