#### :boom: Breaking Change
* Removed helpers for disabling
* Removed progress helpers

#### :rocket: New Feature

* Added `autofocus`
* Added `tabIndex`

#### :nail_care: Polish

* Improved documentation

--- a/src/traits/i-access/i-access.styl
+++ b/src/traits/i-access/i-access.styl
@@ -12,10 +12,9 @@ $p = {
 
 i-access
 	if $p.helpers
-		&_disabled_true &__over-wrapper
-		&_progress_true &__over-wrapper
-			display block
-
-		&_disabled_true &__root-wrapper
-		&_progress_true &__root-wrapper
+		&_disabled_true
 			cursor default
+			pointer-events none
+
+		&_disabled_true &__over-wrapper
+			display block
