--- a/src/traits/i-progress/i-progress.styl
+++ b/src/traits/i-progress/i-progress.styl
@@ -15,5 +15,10 @@ i-progress
 		&__progress
 			display none
 
+		&_progress_true
+			cursor default
+			pointer-events none
+
 		&_progress_true &__progress
+		&_progress_true &__over-wrapper
 			display block
