--- a/src/base/b-dummy/b-dummy.styl
+++ b/src/base/b-dummy/b-dummy.styl
@@ -6,10 +6,10 @@
  * https://github.com/V4Fire/Client/blob/master/LICENSE
  */
 
-@import "super/i-data/i-data.styl"
+@import "super/i-input-text/i-input-text.styl"
 
 $p = {
 
 }
 
-b-dummy extends i-data
+b-dummy extends i-input-text
