--- a/src/base/b-skeleton/b-skeleton.styl
+++ b/src/base/b-skeleton/b-skeleton.styl
@@ -39,14 +39,14 @@ b-skeleton extends i-block
 
 		if $p.animation
 			&:before
-				content ""
-
 				absolute left 50% top 0 bottom 0 right 0
+
+				content ""
 
 				width 500%
 				margin-left -250%
 
-				background $p.animationGradient
+				background-image $p.animationGradient
 				animation-duration $p.animationDuration
 				animation-iteration-count infinite
 				animation-timing-function linear
@@ -78,7 +78,7 @@ b-skeleton extends i-block
 
 			&__item_animation_{toLowerCase($s)}:before
 				animation-name $keyframe
-			
+
 			@keyframes {$keyframe}
 				0%
 					transform translate(-($v), 0)
