--- a/src/base/b-skeleton/b-skeleton.styl
+++ b/src/base/b-skeleton/b-skeleton.styl
@@ -20,7 +20,10 @@ $p = {
 	circleBorderRadius: 50%
 
 	animation: true
-	animationGradient: linear-gradient(to right, alpha(#FFF, 0) 46%, alpha(#FFF, 0.25) 50%, alpha(#FFF, 0) 54%) 50% 50%
+
+	animationGradient: linear-gradient(to right, alpha(#FFF, 0) 46%, alpha(#FFF, 0.25) 50%, alpha(#FFF, 0) 54%)
+	animationGradientPosition: 50% 50%
+
 	animationDuration: 1.5s
 	animationDistanceXXL: 2000px
 	animationDistanceXL: 1200px
@@ -47,6 +50,8 @@ b-skeleton extends i-block
 				margin-left -250%
 
 				background-image $p.animationGradient
+				background-position $p.animationGradientPosition
+
 				animation-duration $p.animationDuration
 				animation-iteration-count infinite
 				animation-timing-function linear
