--- a/src/base/b-slider/b-slider_mode_scroll.styl
+++ b/src/base/b-slider/b-slider_mode_scroll.styl
@@ -22,8 +22,9 @@ b-slider_mode_scroll extends b-slider
 		width 100%
 		visibility hidden
 
-		pointer-events none
 		opacity 0
+
+		pointer-events none
 
 	/mode &__outer-view-wrapper
 		-webkit-overflow-scrolling touch
@@ -42,6 +43,7 @@ b-slider_mode_scroll extends b-slider
 		width 100%
 
 	&__option
+	&__item
 		display inline-block
 
 	/mode&_dynamic-height_false &__outer-view-wrapper
