:art: bSlider refactoring + :memo: README, CHANGELOG

--- a/src/base/b-slider/b-slider_mode_slide.styl
+++ b/src/base/b-slider/b-slider_mode_slide.styl
@@ -10,7 +10,7 @@ $p = {
 
 }
 
-b-slider_mode_slider extends b-slider
+b-slider_mode_slide extends b-slider
 	/mode &__view-content
 		--offset 0px
 		--transform 0px
