:art: bSlider refactoring in progress. Fixed children blocks aligning, if them provided by slot in the scroll mode

--- a/src/base/b-slider/b-slider_mode_scroll.styl
+++ b/src/base/b-slider/b-slider_mode_scroll.styl
@@ -42,8 +42,9 @@ b-slider_mode_scroll extends b-slider
 		white-space nowrap
 		width 100%
 
-	&__option
-	&__item
+	/mode &__view-content > *
+	/mode &__option
+	/mode &__item
 		display inline-block
 
 	/mode&_dynamic-height_false &__outer-view-wrapper
