--- a/src/base/b-slider/b-slider_mode_slide.styl
+++ b/src/base/b-slider/b-slider_mode_slide.styl
@@ -11,6 +11,11 @@ $p = {
 }
 
 b-slider_mode_slide extends b-slider
+	/mode &__view
+		display flex
+		size 100%
+		overflow hidden
+
 	/mode &__view-content
 		--offset 0px
 		--transform 0px
