:art: bSlider refactoring in progress

--- a/src/base/b-slider/b-slider_mode_scroll.styl
+++ b/src/base/b-slider/b-slider_mode_scroll.styl
@@ -40,6 +40,9 @@ b-slider_mode_scroll extends b-slider
 
 	/mode &__view-content
 		white-space nowrap
+
+	/mode &__view-content
+	/mode &__view
 		width 100%
 
 	/mode &__view-content > *
