--- a/src/base/b-window/b-window.styl
+++ b/src/base/b-window/b-window.styl
@@ -17,10 +17,10 @@ $p = {
 }
 
 b-window extends i-data
-	// @stlint-disable
+	// @stint-disable
 	i-visible({helpers: $p.visibleHelpers})
 	i-width({helpers: $p.widthHelpers, selector: ("&__window")})
-	// @stlint-enable
+	// @stint-enable
 
 	zIndex($p.zIndexPos)
 	top 0
