Revert ":house: renamed iItems fields `option(*) -> item(*)` for bVirtualScroll"
This reverts commit de7bcb16011b59dce00a7e7afdcce12d55e0578d.

--- a/src/base/b-virtual-scroll/b-virtual-scroll_theme_demo.styl
+++ b/src/base/b-virtual-scroll/b-virtual-scroll_theme_demo.styl
@@ -7,7 +7,7 @@
  */
 
 b-virtual-scroll_theme_demo extends b-virtual-scroll
-	/theme &__item-el
+	/theme &__option-el
 		position relative
 
 		display flex
@@ -16,7 +16,7 @@ b-virtual-scroll_theme_demo extends b-virtual-scroll
 
 		size 200px
 		margin 20px
-
+		
 		background-color red
 
 		&:after
